Cambios aplicados.
Reemplacé "COP" y "ACTIVE" por enums en AccountEntity.
Modernicé mappers con Stream.toList() y añadí el Javadoc faltante.
Marqué DomainException.args como transient.
Reemplacé operaciones de cuenta como strings por AccountOperation.
Unifiqué validación de DocumentNumber con ObjectHelper.requireNonNull.